# MemoriaLinguistica

./: .gitignore  README.md  hello.py  index.html  pyproject.toml  timeline.pptx
overrides/: custom.css
web-app/: mkdocs.yml
web-app/docs/: index.md  resources.md  team.md
web-app/docs/books/: Viaje al centro de la tierra - inga.docx  Viaje al centro de la tierra - kamentsa.docx
web-app/docs/overrides/: custom.css  main.html
web-app/site/: 404.html  index.html
web-app/site/books/: Viaje al centro de la tierra - inga.docx  Viaje al centro de la tierra - wayuunaiki.docx
web-app/site/resources/: index.html
